<resources>
    <string name="app_name">SchedularApp</string>
    <string name="facebook_app_id">1830773207002421</string>
    <string name="fb_login_protocol_scheme">fb1830773207002421</string>

    <string name="forgot"><u>Forgot password ?</u>.</string>
    <string name="signup"><u>Sign Up</u>.</string>

    <string name="otp_note">Enter the verification code we just sent you in your phone number</string>
    <string name="cal_sync_note"></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="business_hours">Business hours</string>
    <string name="holiday_schedule">Holiday schedule</string>
    <string name="do_not_disturb">Do not disturb</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="_91">+91</string>
    <string name="i_accept_the">I accept the</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign Up</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="continue_">Continue</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend</string>
    <string name="sync_your_calender">Sync Your Calender</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="sync_your_contact">Sync Your Contact</string>
    <string name="save">Save</string>
    <string name="accept">Accept</string>
    <string name="color">Color</string>
    <string name="duration_">Duration</string>
    <string name="tone">Tone</string>
    <string name="if_you_did_t_receive_a_code">if you did\'t receive a code</string>
    <string name="sms_heading">These quick responses will be available when you respond to an incomming call with a text.Change them to say anything you like</string>
    <string name="respond_with_message">Respond with message</string>
    <string name="frg_note">When Do Not Disturb is on , sound and vibration will be turned off,expect for the cases you allowed below</string>
    <string name="web_client_id">175367428579-h0n609ki83rdg4j6q3a9h63q79t4iv9p.apps.googleusercontent.com</string>
    <string name="enter_do_not_disturb_name">Enter Do not disturb name</string>


</resources>
