<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_above="@id/ll"
        android:gravity="center"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:text="Log In"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="24dp"
            android:layout_height="wrap_content" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/ll"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/e_mail"
            android:id="@+id/tv_name"
            style="@style/Login_TextView"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:id="@+id/et_lmail"
            style="@style/Login_EditText"/>

        <TextView
            android:layout_marginTop="25dp"
            android:id="@+id/tv_pass"
            android:text="@string/password"
            style="@style/Login_TextView"/>
        <androidx.appcompat.widget.AppCompatEditText
            style="@style/Login_EditText"
            android:hint="@string/enter_password"
            android:id="@+id/et_lpass"
            android:inputType="textPassword"
            android:imeOptions="actionDone"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_type_"
            android:text="Forgot password ?"
            android:textStyle="bold"
            android:onClick="forgotPassword"
            android:gravity="center|end"
            android:textColor="@color/colorPrimary"
            android:layout_height="30dp" />

        <Button
            android:onClick="login"
            android:text="@string/login"
            android:layout_marginTop="20dp"
            style="@style/Button_Style"/>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/or"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="40dp" />


        <com.google.android.gms.common.SignInButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/sign_in_button"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp">

        </com.google.android.gms.common.SignInButton>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:onClick="signUp"
        android:gravity="center"
        android:layout_height="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="Don't have an account ? "
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="17dp"
            android:textColor="@color/colorPrimary"
            android:text=" Sign Up"
            android:layout_height="wrap_content" />

    </LinearLayout>



</RelativeLayout>