<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/background"

    android:layout_height="match_parent"
    tools:context=".OtpVerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center|top"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:text="Verification"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="72dp"
            android:textColor="@color/colorPrimary"
            android:textSize="24dp"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="72dp"
            android:src="@drawable/send"
            android:layout_marginTop="48dp"
            android:layout_height="72dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="48dp"
            android:paddingStart="48dp"
            android:textColor="@color/colorPrimaryDark"
            android:paddingEnd="48dp"
            android:textSize="16dp"
            android:text="@string/otp_note"
            android:lineSpacingExtra="5dp"
            android:layout_height="wrap_content"/>

        <com.mukesh.OtpView android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:inputType="number"
            android:textColor="@android:color/white"
            app:itemCount="4"
            app:lineColor="@color/colorPrimary"
            app:viewType="line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:text="@string/if_you_did_t_receive_a_code"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:text="@string/resend"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:text="@string/verify"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Button_Style"/>


</androidx.constraintlayout.widget.ConstraintLayout>